--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.27",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
